# RTX

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cu
data/: image.ppm
renders/: image.ppm
src/: Camera.h  Hittable.h  Ray.h  Sphere.h  Vector.h  cuda_helpers.cu  cuda_helpers.h  hitable_list.h  hittable.cu  hittable.h  hittableList.cu  hittableList.h  material.h  materials.cpp  materials.cu  materials.h  ray.cu  ray.h  scene.cpp  scene.cu  scene.h  scenes.h  shapes.cpp  shapes.cu  shapes.h  sphere.cu  sphere.h  util.cpp  util.cu  util.h  vector.h
